change encoding for files to utf-8

--- a/src/styles/common/_interests.scss
+++ b/src/styles/common/_interests.scss
@@ -1,7 +1,7 @@
 .interests {
   font-family: Roboto-light, sans-serif;
   color: #333333;
-  font-size: 18px; /* Приближение из-за подстановки шрифтов */
+  font-size: 18px; /* РџСЂРёР±Р»РёР¶РµРЅРёРµ РёР·-Р·Р° РїРѕРґСЃС‚Р°РЅРѕРІРєРё С€СЂРёС„С‚РѕРІ */
   font-weight: 300;
   text-align: center;
   margin: 34px auto 40px;
